Change foreknowledge to remarks
